# gpg_gui

./: .gitignore  GpgGui.icns  README.md  check_tkinter.py  gpg_gui.py  gpg_process.py  install.sh  install_gpg.py  preferences.py  pyproject.toml  requirements.txt  run_gpg_gui.command  run_gpg_gui.sh  setup.py  test_tkinter_fix.py  todo.txt
